RESOLVED FIXED281056
REGRESSION(284780@main) [GTK][WPE][Debug] Build failure with GCC: no match for ‘operator==’ (operand types are ‘unsigned char:2’ and ‘WebCore::RepaintStatus’)
https://bugs.webkit.org/show_bug.cgi?id=281056
Summary REGRESSION(284780@main) [GTK][WPE][Debug] Build failure with GCC: no match fo...
Vitaly Dyackhov
Reported 2024-10-08 08:39:15 PDT
``` Source/WebCore/rendering/RenderLayer.cpp:1272:37: error: no match for ‘operator==’ (operand types are ‘unsigned char:2’ and ‘WebCore::RepaintStatus’) ```
Attachments
Vitaly Dyackhov
Comment 1 2024-10-08 08:48:28 PDT
Michael Catanzaro
Comment 2 2024-10-08 11:46:55 PDT
*** Bug 281025 has been marked as a duplicate of this bug. ***
Claudio Saavedra
Comment 3 2024-10-09 04:52:08 PDT
*** Bug 281051 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2024-10-09 13:56:47 PDT
Committed 284922@main (cbdd3c329804): <https://commits.webkit.org/284922@main> Reviewed commits have been landed. Closing PR #34841 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.