REGRESSION(284780@main) [GTK][WPE][Debug] Build failure with GCC: no match for ‘operator==’ (operand types are ‘unsigned char:2’ and ‘WebCore::RepaintStatus’) https://bugs.webkit.org/show_bug.cgi?id=281056

Reviewed by Matt Woodrow and Michael Catanzaro.

This is clearly a compiler bug.
Using `this->m_repaintStatus` forces `gcc` to re-evaluate the type
and fixes the problem.

* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::recursiveUpdateLayerPositions):

Canonical link: https://commits.webkit.org/284922@main